--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <title>Title</title>
+    <script type="text/javascript" src="../static/script/jquery2.1.4.js"></script>
+    <script type="text/javascript" src="scripts/postjs.js"></script>
 </head>
 <body>
 <h1> hello Spring boot!</h1>
 <h2>Hello world!</h2>
 <h3>Hello JAVA!</h3>
-
+<div>
+<table id="test"></table>
+</div>
 </body>
 </html>
