--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <title>Title</title>
-    <script type="text/javascript" src="../static/script/jquery2.1.4.js"></script>
-    <script type="text/javascript" src="scripts/postjs.js"></script>
+    <script type="text/javascript" src="script/jquery2.1.4.js"></script>
+    <script type="text/javascript" src="script/querylist.js"></script>
 </head>
 <body>
 <h1> hello Spring boot!</h1>
 <h2>Hello world!</h2>
 <h3>Hello JAVA!</h3>
+<a href="reqtest.html">请求方法</a>
 <div>
 <table id="test"></table>
 </div>
