--- a/src/main/resources/templates/reqtest.html
+++ b/src/main/resources/templates/reqtest.html
@@ -74,13 +74,11 @@
                 <input id="submits" type="button" value="提交" />
             </form>
             <!--</div>-->
+            <ul id="show" style="background-color: #C0C0C0; padding: 20px;margin-right: 200px"></ul>
         </div>
     </div>
 </div>
         <script type="text/javascript" src="scripts/requestMethod.js"></script>
-
-
-        <ul id="show"></ul>
 
 
 
